# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = batchtools/_version.py
versionfile_build = batchtools/_version.py
tag_prefix = v
parentdir_prefix = batchtools-

[metadata]
description-file = README.md

